k8s/delete.button/yaml/client-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: client-api
  name: client-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/gloss-api-backend_default: "true"
        io.kompose.service: client-api
    spec:
      containers:
        - image: client-api
          name: api-client
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
