k8s/delete.button/yaml/client-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: client-api
  name: client-api
spec:
  ports:
    - name: "4305"
      port: 4305
      targetPort: 80
  selector:
    io.kompose.service: client-api
status:
  loadBalancer: {}
